[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Base.gd" type="Script" id=2]
[ext_resource path="res://TileMap.gd" type="Script" id=3]
[ext_resource path="res://Effects.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 61, 62, 1, 62, 1, 1, 61, 1 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 3, -1, 61, 62 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Base" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 262153, 0, 0 )
script = ExtResource( 3 )

[node name="Effects" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 428.598, 299.334 )

[connection signal="spawn_chunk" from="TileMap" to="." method="_on_TileMap_spawn_chunk"]
[connection signal="connect_bullet_to_tilemap" from="Effects" to="." method="_on_Effects_connect_bullet_to_tilemap"]
